[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "ipykernel>=7.1.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]
